# rmls

./: Cargo.toml  README.md  T  demo.gif:Zone.Identifier  directories.txt  dumped  files2.sh  logs.txt  rust_logo.png:Zone.Identifier
src/: lib.rs  main.rs  tui.rs
symbolic_links/: hard_link
