[package]
name = "rmls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "recover"
path = "src/bin/recover.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[dependencies]
bincode = "1.3.3"
crossterm = "0.27.0"
fiemap = "0.1.2"
indexset = "0.4.0"
ratatui = "0.26.3"
serde = { version = "1.0.203", features = ["derive"] }
